# iitb-risc-toolchain

./: .gitignore  CMakeLists.txt
docs/: isa_spec.md
include/: Assembler.hpp  Emulator.hpp  Instruction.hpp  Lexer.hpp  Linker.hpp  ObjectFile.hpp  Parser.hpp
src/: Assembler.cpp  Emulator.cpp  Lexer.cpp  Linker.cpp  ObjectFile.cpp  Parser.cpp  main.cpp
tests/: LW_SW.asm  corner_cases.asm  lib.asm  main_prog.asm  test1.asm  test2.asm  test3.asm  test_assembler.cpp  test_emulator.asm  test_lexer.cpp  test_lm_sm.asm
